# Graphics-Engine

./: .gitignore  CMakeLists.txt  fulltree.txt  output.txt
3D Model/: Modredcai.mtl
engine/include/: Mesh.hpp
engine/include/Engine/: Buffers.h  Buffers.hpp  CameraComponent.hpp  Component.hpp  Engine.hpp  Entity.hpp  Material.hpp  Mesh.hpp  MeshLoader.hpp  MeshRendererComponent.hpp  Model.hpp  PipelineState.hpp  Renderer.hpp  Sampler.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.hpp  TexturedMaterial.hpp  TintedMaterial.hpp  Transform.hpp  World.hpp  shader.hpp
engine/include/Engine/Assets/Importers/: GltfImporter.hpp  ObjImporter.hpp
engine/include/Engine/Assets/Loaders/Mesh/: MeshLoader.hpp
engine/include/Engine/Assets/Loaders/Shader/: ShaderLoader.hpp
engine/include/Engine/Assets/Loaders/Texture/: TextureLoader.hpp
engine/include/Engine/Core/Graphics/Buffers/: Buffers.hpp
engine/include/Engine/Core/Graphics/Shader/: Shader.hpp
engine/include/Engine/Core/Graphics/State/: PipelineState.hpp
engine/include/Engine/Core/Graphics/Texture/: Sampler.hpp  Texture.hpp
engine/include/Engine/Core/Input/: InputManager.hpp
engine/include/Engine/Core/Math/: Transform.hpp
engine/include/Engine/ECS/Components/Camera/: CameraComponent.hpp
engine/include/Engine/ECS/Components/Rendering/: MeshRendererComponent.hpp
engine/include/Engine/ECS/Core/Component/: Component.hpp
engine/include/Engine/ECS/Core/Entity/: Entity.hpp
engine/include/Engine/ECS/Core/World/: World.hpp
engine/include/Engine/Rendering/Core/: Renderer.hpp
engine/include/Engine/Rendering/Geometry/Mesh/: Mesh.hpp
engine/include/Engine/Rendering/Geometry/Model/: Model.hpp
engine/include/Engine/Rendering/Materials/Base/: Material.hpp
engine/include/Engine/Rendering/Materials/Implementations/: TexturedMaterial.hpp  TintedMaterial.hpp
engine/include/Engine/Scene/: SceneLoader.hpp
engine/src/: Buffers.cpp  CameraComponent.cpp  Entity.cpp  Mesh.cpp  MeshLoader.cpp  MeshRendererComponent.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TexturedMaterial.cpp  Transform.cpp  World.cpp  shader.cpp  transform.cpp
engine/src/Assets/Importers/: GltfImporter.cpp  ObjImporter.cpp
engine/src/Assets/Loaders/Mesh/: MeshLoader.cpp
engine/src/Assets/Loaders/Shader/: ShaderLoader.cpp
engine/src/Assets/Loaders/Texture/: TextureLoader.cpp
engine/src/Core/Graphics/Buffers/: Buffers.cpp
engine/src/Core/Graphics/Shader/: Shader.cpp
engine/src/Core/Graphics/State/: PipelineState.cpp
engine/src/Core/Graphics/Texture/: Sampler.cpp  Texture.cpp
engine/src/Core/Input/: InputManager.cpp
engine/src/Core/Math/: Transform.cpp
engine/src/ECS/Components/Camera/: CameraComponent.cpp
engine/src/ECS/Components/Rendering/: MeshRendererComponent.cpp
engine/src/ECS/Core/Entity/: Entity.cpp
engine/src/ECS/Core/World/: World.cpp
engine/src/Rendering/Core/: Renderer.cpp
engine/src/Rendering/Geometry/Mesh/: Mesh.cpp
engine/src/Rendering/Geometry/Model/: Model.cpp
engine/src/Rendering/Materials/Base/: Material.cpp
engine/src/Rendering/Materials/Implementations/: TexturedMaterial.cpp  TintedMaterial.cpp
engine/src/Scene/: SceneLoader.cpp
game/: gametree.txt  main.cpp
game/assets/: Tree.mtl
game/assets/models/: shawarma.mtl
game/assets/models/Rigby/: Rigby.mtl
game/assets/scenes/: abandoned_house_scene.json  example_scene.json  simple_scene.json
game/assets/shaders/: basic.frag  psx_unlit.frag  psx_unlit.vert  textured.frag
game/include/: CameraController.hpp  CatController.hpp
game/include/Materials/: PS1Material.hpp
game/src/: CameraController.cpp  CatController.cpp  PS1Material.cpp
include/: renderer.h  shader.h
include/model/: mesh.h  model.h
shaders/: basic.frag  basic.vert
src/: main.cpp  shader.cpp
